# gazebo_starter_package

./: CMakeLists.txt  README.md
include/: get_phys_engine.hh  system_publisher.hh  system_subscriber.hh
models/object_1/: model.config  model.sdf
models/object_2/: model.config  model.sdf
src/: CMakeLists.txt  create_joint.cc  get_phys_engine.cpp  system_publisher.cpp  system_subscriber.cpp
